--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:
   Yawar Raza
 description:
-  A showcase of some of the applications I've developed
+  Seeking an entry-level software engineering job. Willing to relocate. —— Functional Programming | Object-Oriented Design | SQL Databases | Interactive Visualizations and Games | Programming Language Theory | Type Systems
 include:
   - index.md
   - projects.md
