--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:
-  Yawar Raza
+  [Yawar Raza](https://YawarRaza7349.github.io)
 description:
   Seeking an entry-level software engineering job. Willing to relocate. —— Functional Programming | Object-Oriented Design | SQL Databases | Interactive Visualizations and Games | Programming Language Theory | Type Systems
 include:
