--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title:
-  [Yawar Raza](https://YawarRaza7349.github.io)
+  Yawar Raza
 description:
-  [Profile](https://YawarRaza7349.github.io)  
-  [Projects](https://YawarRaza7349.github.io/projects)
-  [Portfolio](https://YawarRaza7349.github.io/creative)
+  [Profile](https://YawarRaza7349.github.io), [Projects](https://YawarRaza7349.github.io/projects), [Portfolio](https://YawarRaza7349.github.io/creative)
 include:
   - index.md
   - projects.md
