--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:
   Yawar Raza
 description:
-  [Profile](https://YawarRaza7349.github.io), [Projects](https://YawarRaza7349.github.io/projects), [Portfolio](https://YawarRaza7349.github.io/creative)
+  Seeking an entry-level software engineering job. Willing to relocate. —— Functional Programming | Object-Oriented Design | SQL Databases | Interactive Visualizations and Games | Programming Language Theory | Type Systems
 include:
   - index.md
   - projects.md
