--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:
   Yawar Raza
 description:
-  Seeking an entry-level software engineering job. Willing to relocate. —— Functional Programming | Object-Oriented Design | SQL Databases | Interactive Visualizations and Games | Programming Language Theory | Type Systems
+  Copy of my LinkedIn profile
 include:
   - index.md
   - projects.md
